<resources>
    <string name="appName">Trip Plan</string>
    <string name="itemImage">Item image</string>
    <string name="trips">Trips</string>
    <string name="users">Users</string>
    <string name="notSignedIn">Not signed in</string>
    <string name="signedIn">Signed in successfully</string>
    <string name="destination">Destination</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="comment">Comment</string>
    <string name="tapToAddStartDate">Tap to add start date</string>
    <string name="tapToAddEndDate">Tap to add end date</string>
    <string name="emptyDestination">Destination cannot be empty</string>
    <string name="emptyStartDate">Start date is not set</string>
    <string name="emptyEndDate">End date is not set</string>
    <string name="earlyEndDate">End date cannot be before start date</string>
    <string name="showTrips">Show Trips</string>
    <string name="changeRole">Change Role</string>
    <string name="email">Email</string>
    <string name="role">Current Role</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="signOut">Sign out</string>
    <string name="deleteUser">Delete User</string>
    <string name="confirmUserDelete">Are you sure you want to delete this user? This operation cannot be undone</string>
    <string name="add">Add</string>
    <string name="thisMonth">This Month</string>
    <string name="nextMonth">Next Month</string>
    <string name="pastTrips">Completed</string>
    <string name="filter">Filter</string>
    <string name="ongoing">Ongoing</string>
    <string name="upcoming">Upcoming</string>
    <string name="later">Later</string>
    <string name="allTrips">All Trips</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirmTripDelete">Delete Trip?</string>
    <string name="emptyTripList">No Trips</string>
    <string name="user">User</string>
    <string name="manager">Manager</string>
    <string name="admin">Admin</string>
    <string name="emptyName">Name cannot be empty</string>
    <string name="emptyEmail">Email cannot be empty</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
</resources>
