<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="handler"
            type="com.amrabed.tripplan.view.trip.TripDetailsFragment.Handler" />

        <variable
            name="model"
            type="com.amrabed.tripplan.data.models.TripViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/primaryColor"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/imageHeight"
                    android:background="@color/primaryColor"
                    android:contentDescription="@string/itemImage"
                    android:scaleType="centerCrop"
                    android:src="@{model.selectedTrip.image}"
                    app:layout_collapseMode="parallax" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeight"
                    android:paddingStart="@dimen/defaultMargin"
                    android:paddingTop="@dimen/defaultMargin"
                    android:paddingEnd="@dimen/defaultMargin"
                    android:text="@{model.selectedTrip.destination}"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:visibility="@{model.isEditing  ? View.GONE : View.VISIBLE}" />

                <EditText
                    android:id="@+id/titleEdit"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeight"
                    android:hint="@string/destination"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:paddingStart="@dimen/defaultMargin"
                    android:paddingTop="@dimen/defaultMargin"
                    android:paddingEnd="@dimen/defaultMargin"
                    android:selectAllOnFocus="true"
                    android:text="@={model.selectedTrip.destination}"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    android:visibility="@{model.isEditing ? View.VISIBLE : View.GONE}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeight"
                    android:layout_margin="@dimen/defaultMargin"
                    android:gravity="center_vertical"
                    android:onClick="@{() -> model.isEditing ? handler.showDialog(true) : null}"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/startDate"
                        android:paddingStart="@dimen/defaultMargin"
                        android:paddingEnd="@dimen/defaultMargin"
                        android:text="@string/startDate" />

                    <TextView
                        android:id="@+id/startDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tapToAddStartDate"
                        android:paddingStart="@dimen/defaultMargin"
                        android:paddingEnd="@dimen/defaultMargin"
                        android:text="@{model.selectedTrip.startDate}"
                        android:textAppearance="@android:style/TextAppearance.Material" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeight"
                    android:layout_margin="@dimen/defaultMargin"
                    android:gravity="center_vertical"
                    android:onClick="@{() -> model.isEditing ? handler.showDialog(false) : null}"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/endDate"
                        android:paddingStart="@dimen/defaultMargin"
                        android:paddingEnd="@dimen/defaultMargin"
                        android:text="@string/endDate" />

                    <TextView
                        android:id="@+id/endDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tapToAddEndDate"
                        android:paddingStart="@dimen/defaultMargin"
                        android:paddingEnd="@dimen/defaultMargin"
                        android:text="@{model.selectedTrip.endDate}"
                        android:textAppearance="@android:style/TextAppearance.Material" />
                </LinearLayout>

                <EditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/defaultMargin"
                    android:background="@android:color/transparent"
                    android:hint="@string/comment"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:paddingStart="@dimen/defaultMargin"
                    android:paddingEnd="@dimen/defaultMargin"
                    android:text="@={model.selectedTrip.comment}"
                    android:textAppearance="?android:textAppearanceListItem" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/defaultMargin"
            android:backgroundTint="@color/primaryColor"
            android:contentDescription="@string/done"
            android:onClick="@{() -> handler.doneEditing(model.selectedTrip)}"
            android:src="@drawable/done"
            android:visibility="@{model.isEditing ? View.VISIBLE : View.GONE}" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
