<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="com.amrabed.tripplan.view.user.UserProfileEditFragment.Handler" />

        <variable
            name="model"
            type="com.amrabed.tripplan.data.models.UserViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/defaultMargin"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeight"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:paddingStart="@dimen/defaultMargin"
                    android:paddingTop="@dimen/defaultMargin"
                    android:paddingEnd="@dimen/defaultMargin"
                    android:text="@={model.selectedUser.name}"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/defaultMargin"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:text="@={model.selectedUser.email}"
                    android:textAlignment="viewStart"
                    android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/defaultMargin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/role"
                        android:textAppearance="@android:style/TextAppearance.Material.Caption" />

                    <TextView
                        android:id="@+id/role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/defaultMargin"
                        android:onClick="@{() -> handler.showRoleDialog()}"
                        android:text="@{model.selectedUser.role.text}"
                        android:textAlignment="viewStart"
                        android:textAppearance="@android:style/TextAppearance.Material" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/defaultMargin"
            android:backgroundTint="@color/primaryColor"
            android:contentDescription="@string/done"
            android:onClick="@{() -> handler.doneEditing(model.selectedUser)}"
            android:src="@drawable/done" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
