<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.amrabed.tripplan.R" />

        <import type="android.view.View" />

        <variable
            name="handler"
            type="com.amrabed.tripplan.view.user.UserProfileFragment.Handler" />

        <variable
            name="model"
            type="com.amrabed.tripplan.data.models.UserViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/primaryColor"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/imageHeight"
                    android:background="@color/primaryColor"
                    android:contentDescription="@string/itemImage"
                    android:scaleType="centerCrop"
                    android:src="@{model.selectedUser.imageURL}"
                    app:layout_collapseMode="parallax"
                    app:placeholder="@{R.drawable.user}" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeight"
                    android:layout_gravity="center"
                    android:paddingStart="@dimen/defaultMargin"
                    android:paddingTop="@dimen/defaultMargin"
                    android:paddingEnd="@dimen/defaultMargin"
                    android:text="@{model.selectedUser.name}"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.WindowTitle" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/defaultMargin"
                    android:gravity="start|center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/email"
                        android:textAppearance="@android:style/TextAppearance.Material.Caption" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/defaultMargin"
                        android:text="@={model.selectedUser.email}"
                        android:textAlignment="viewStart"
                        android:textAppearance="@android:style/TextAppearance.Material.Body2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/defaultMargin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/role"
                        android:textAppearance="@android:style/TextAppearance.Material.Caption" />

                    <TextView
                        android:id="@+id/role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/defaultMargin"
                        android:text="@{model.selectedUser.role.text}"
                        android:textAlignment="viewStart"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1" />
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/defaultMargin"
                    android:background="@color/primaryColor"
                    android:onClick="@{() -> handler.showUserTrips()}"
                    android:padding="@dimen/fui_auth_method_button_drawablePadding"
                    android:text="@string/showTrips"
                    android:textColor="@android:color/white"
                    android:visibility="@{model.isAdmin() ? View.VISIBLE : View.GONE}" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/defaultMargin"
                    android:background="@android:color/holo_orange_dark"
                    android:onClick="@{() -> handler.showRoleDialog()}"
                    android:padding="@dimen/buttonPadding"
                    android:text="@string/changeRole"
                    android:textColor="@android:color/white"
                    android:visibility="@{model.hasHigherRole() ? View.VISIBLE : View.GONE}" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/defaultMargin"
                    android:background="@android:color/holo_red_dark"
                    android:onClick="@{() -> handler.showDeleteDialog()}"
                    android:padding="@dimen/buttonPadding"
                    android:text="@string/deleteUser"
                    android:textColor="@android:color/white"
                    android:visibility="@{model.hasHigherRole() ? View.VISIBLE : View.GONE}" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
